<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp">

    <RelativeLayout
        android:id="@+id/rl_item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_medium_2"
            app:cardCornerRadius="8dp"
            android:elevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_westin_circle"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:src="@drawable/westin_circle"
                    android:scaleType="centerCrop"
                    />

                <ImageView
                    android:id="@+id/iv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bookmark_border_white_24dp"
                    android:layout_alignEnd="@+id/iv_westin_circle"
                    android:layout_alignTop="@+id/iv_westin_circle"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"/>

                <LinearLayout
                    android:id="@+id/ll_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignStart="@+id/iv_westin_circle"
                    android:layout_alignBottom="@+id/iv_westin_circle">

                    <ImageView
                        android:id="@+id/iv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_gold_24dp"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginStart="@dimen/margin_medium"/>

                    <TextView
                        android:id="@+id/tv_rating_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_points"
                        android:textColor="@color/icons"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_price_per_day"
                    android:layout_width="68dp"
                    android:layout_height="30dp"
                    android:text="@string/price_per_day"
                    android:layout_alignBottom="@+id/ll_rating"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/shape"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/icons"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_title_the_westeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_westeen"
            android:layout_below="@+id/cv_card2"
            android:layout_alignStart="@+id/cv_card2"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>

        <TextView
            android:id="@+id/tv_gulshan_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gulshan_circle_2_dahka"
            android:layout_below="@+id/tv_title_the_westeen"
            android:layout_alignStart="@+id/tv_title_the_westeen"
            android:textSize="@dimen/text_regular_2x"
            android:textColor="@color/divider"/>

        <LinearLayout
            android:id="@+id/ll_discount_and_facilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/cv_card2"
            android:layout_alignEnd="@+id/cv_card2"
            android:layout_alignTop="@+id/tv_title_the_westeen">

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_50_percent_off"
                android:layout_marginStart="124dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="@dimen/text_smaller"
                android:textStyle="bold"
                android:textColor="@color/purple_pink"/>



            <LinearLayout
                android:id="@+id/ll_free_wifi_swimming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignTop="@+id/tv_gulshan_circle"
                android:layout_toEndOf="@+id/tv_gulshan_circle"
                android:layout_marginStart="64dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium">

                <TextView
                    android:id="@+id/tv_free_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_wifi"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/text_small"/>

                <ImageView
                    android:id="@+id/iv_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brightness_1_black_24dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"/>

                <TextView
                    android:id="@+id/tv_swimming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swimming"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/text_small"
                    />

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>