<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold"
                    android:textColor="@color/primary_text"/>

                <!--<Button
                    android:id="@+id/btn_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/tv_explore"
                    android:layout_marginEnd="@dimen/margin_medium_3"/>-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/tv_explore"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:text="@string/btn_filters"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_text"
                    android:backgroundTint="@color/icons"
                    app:cornerRadius="14dp"
                    app:icon="@drawable/ic_file_upload_black_24dp"
                    app:iconTint="@color/colorPrimary" />

                <RelativeLayout
                    android:id="@+id/rl_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_explore"
                    android:layout_alignStart="@+id/tv_explore"
                    android:layout_marginTop="@dimen/margin_medium">

                    <RelativeLayout
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:layout_marginTop = "@dimen/margin_card_medium_2"
                        android:background = "@drawable/border"
                        android:padding="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2">

                        <TextView
                            android:id="@+id/tv_location"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_alignParentStart = "true"
                            android:layout_centerInParent = "true"
                            android:text = "@string/dhaka"
                            android:layout_toStartOf="@id/img_location"
                            android:textSize = "@dimen/text_regular_2x" />

                        <ImageView
                            android:id="@+id/img_location"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:src = "@drawable/ic_play_circle_filled_black_24dp"
                            android:layout_alignParentEnd = "true" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:layout_alignParentTop = "true"
                        android:layout_marginStart = "@dimen/margin_medium_2"
                        android:background = "@android:color/white"
                        android:text = "@string/location"
                        android:textSize = "@dimen/text_regular_2x" />

                </RelativeLayout>

                <LinearLayout
                    android:id = "@+id/ll_check_in_out"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_below = "@+id/rl_location"
                    android:layout_marginTop = "@dimen/margin_medium_2"
                    android:layout_alignStart="@+id/rl_location"
                    android:orientation = "horizontal"
                    android:weightSum = "2"
                    android:baselineAligned = "false">

                    <RelativeLayout
                        android:id="@+id/rl_check_in"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_marginTop = "@dimen/margin_medium"
                        android:layout_marginEnd = "4dp"
                        android:layout_weight = "1">

                        <RelativeLayout
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:layout_marginTop = "@dimen/margin_medium"
                            android:background = "@drawable/border"
                            android:padding = "@dimen/margin_medium_2">

                            <TextView
                                android:id="@+id/tv_check_in_date"
                                android:layout_width = "wrap_content"
                                android:layout_height = "wrap_content"
                                android:layout_alignParentStart = "true"
                                android:layout_centerInParent = "true"
                                android:text = "@string/check_in_date"
                                android:textColor = "@color/primary_text"
                                android:textSize = "@dimen/text_regular_2x" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_check_in_lbl"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_alignParentTop = "true"
                            android:layout_marginStart = "@dimen/margin_medium_2"
                            android:background = "@android:color/white"
                            android:text = "@string/check_in"
                            android:textSize = "@dimen/text_regular_2x" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_check_out"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_marginStart = "4dp"
                        android:layout_marginTop = "@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:layout_weight = "1">

                        <RelativeLayout
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:layout_marginTop = "@dimen/margin_card_medium_2"
                            android:background = "@drawable/border"
                            android:padding = "@dimen/margin_medium_2">

                            <TextView
                                android:layout_width = "wrap_content"
                                android:layout_height = "wrap_content"
                                android:layout_alignParentStart = "true"
                                android:layout_centerInParent = "true"
                                android:text = "@string/check_out_date"
                                android:textColor = "@color/primary_text"
                                android:textSize = "@dimen/text_regular_2x" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_alignParentTop = "true"
                            android:layout_marginStart = "@dimen/margin_medium_2"
                            android:background = "@android:color/white"
                            android:text = "@string/check_out"
                            android:textSize = "@dimen/text_regular_2x" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id = "@+id/ll_count_and_room"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_below = "@+id/ll_check_in_out"
                    android:layout_marginTop = "@dimen/margin_medium_2"
                    android:layout_alignStart="@+id/rl_location"
                    android:orientation = "horizontal"
                    android:weightSum = "2"
                    android:baselineAligned = "false">

                    <RelativeLayout
                        android:id="@+id/rl_count"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_marginTop = "@dimen/margin_medium"
                        android:layout_marginEnd = "4dp"
                        android:layout_weight = "1">

                        <RelativeLayout
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:layout_marginTop = "@dimen/margin_medium"
                            android:background = "@drawable/border"
                            android:padding = "@dimen/margin_medium_2">

                            <TextView
                                android:id="@+id/tv_count_no"
                                android:layout_width = "wrap_content"
                                android:layout_height = "wrap_content"
                                android:layout_alignParentStart = "true"
                                android:layout_centerInParent = "true"
                                android:text = "@string/count_no"
                                android:textColor = "@color/primary_text"
                                android:textSize = "@dimen/text_regular_2x" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_count_lbl"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_alignParentTop = "true"
                            android:layout_marginStart = "@dimen/margin_medium_2"
                            android:background = "@android:color/white"
                            android:text = "@string/count"
                            android:textSize = "@dimen/text_regular_2x" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_rooms"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_marginStart = "4dp"
                        android:layout_marginTop = "@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:layout_weight = "1">

                        <RelativeLayout
                            android:layout_width = "match_parent"
                            android:layout_height = "wrap_content"
                            android:layout_marginTop = "@dimen/margin_card_medium_2"
                            android:background = "@drawable/border"
                            android:padding = "@dimen/margin_medium_2">

                            <TextView
                                android:id="@+id/tv_room_no"
                                android:layout_width = "wrap_content"
                                android:layout_height = "wrap_content"
                                android:layout_alignParentStart = "true"
                                android:layout_centerInParent = "true"
                                android:text = "@string/room_no"
                                android:textColor = "@color/primary_text"
                                android:textSize = "@dimen/text_regular_2x" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_romms"
                            android:layout_width = "wrap_content"
                            android:layout_height = "wrap_content"
                            android:layout_alignParentTop = "true"
                            android:layout_marginStart = "@dimen/margin_medium_2"
                            android:background = "@android:color/white"
                            android:text = "@string/romms"
                            android:textSize = "@dimen/text_regular_2x" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id = "@+id/ll_search_buttons"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_below = "@+id/ll_count_and_room"
                    android:layout_marginTop = "@dimen/margin_medium_2"
                    android:layout_alignStart="@+id/tv_explore"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    android:orientation = "horizontal"
                    android:weightSum = "5">

                    <Button
                        android:id="@+id/btn_search_now"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_marginEnd = "@dimen/margin_medium"
                        android:layout_weight = "4"
                        android:backgroundTint = "@color/colorPrimary"
                        android:text = "@string/btn_label_search_now" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_map"
                        android:layout_width = "0dp"
                        android:layout_height = "wrap_content"
                        android:layout_weight = "1"
                        android:backgroundTint = "@color/colorPrimary"
                        app:icon = "@drawable/ic_map_white_24dp"
                        app:iconGravity = "textStart"
                        app:iconPadding = "0dp" />
                </LinearLayout>

                <LinearLayout
                    android:id = "@+id/ll_top_searches"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_below = "@+id/ll_search_buttons"
                    android:layout_marginTop = "@dimen/margin_medium"
                    android:orientation = "vertical">

                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:layout_marginTop = "@dimen/margin_medium"
                        android:text = "@string/title_top_search"
                        android:textColor = "@color/primary_text" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_top_searches"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:paddingStart="@dimen/margin_medium"
                        android:clipToPadding="false"/>

                </LinearLayout>

                <LinearLayout
                    android:id = "@+id/ll_recent_searches"
                    android:layout_width = "match_parent"
                    android:layout_height = "wrap_content"
                    android:layout_below = "@+id/ll_top_searches"
                    android:layout_marginTop = "@dimen/margin_medium"
                    android:orientation = "vertical">

                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:layout_marginTop = "@dimen/margin_medium"
                        android:text = "@string/title_recent_search"
                        android:textColor = "@color/primary_text" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_recent_searches"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:paddingStart="@dimen/margin_medium"
                        android:clipToPadding="false"/>
                </LinearLayout>



            </RelativeLayout>
        </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>